--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -1,8 +1,15 @@
 {
-  // ...
   "plugins": [
-    // ...
-    {
+	  {
+	        "id": "asset-library",
+	        "title": "AEM Assets Selector",
+	        "environments": ["edit"],
+	        "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+	        "isPalette": true,
+	        "includePaths": ["**.docx**"],
+	        "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+	      },
+	{
       "id": "generate-variations",
       "title": "Generate Variations",
       "url": "https://experience.adobe.com/aem/generate-variations",
@@ -10,6 +17,5 @@
       "environments": ["preview","live", "edit"],
       "includePaths": ["**.docx**"]
     }
-    // ...
   ]
 }
